buildSrc/src/test/resources/test-projects/invalid-demo/build.gradle.kts
plugins {
    base
}

subprojects {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
}
